force-app/main/default/objects/Security_Event__c/Security_Event__c.object-meta.xml
<CustomObject>
    <label>Security Event</label>
    <nameField>
        <displayFormat>EVT-{0000000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>