force-app/main/default/objects/Security_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>LoginHistory</fullName>
            </value>
            <value>
                <fullName>SetupAuditTrail</fullName>
            </value>
            <value>
                <fullName>LoginAs</fullName>
            </value>
            <value>
                <fullName>ReportExport</fullName>
            </value>
            <value>
                <fullName>ApiTotalUsage</fullName>
            </value>
            <value>
                <fullName>BulkApi</fullName>
            </value>
            <value>
                <fullName>RestApi</fullName>
            </value>
            <value>
                <fullName>URI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>