force-app/main/default/objects/Security_Event__c/fields/Source_Json__c.field-meta.xml
<CustomField>
    <fullName>Source_Json__c</fullName>
    <label>Source JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>