force-app/main/default/objects/Security_Event__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Events</relationshipLabel>
    <relationshipName>Security_Events</relationshipName>
    <type>Lookup</type>
</CustomField>